tests/baselines/reference/giant.errors.txt
==== tests/cases/compiler/giant.ts (216 errors) ====
    
    /*
        Prefixes
        p -> public
        r -> private
        i -> import
        e -> export
        a -> ambient
        t -> static
        s -> set
        g -> get
    
        MAX DEPTH 3 LEVELS
    */
    var V;
    function F() { };
    class C {
        constructor () { }
        public pV;
        private rV;
        public pF() { }
        private rF() { }
        public pgF() { }
        public get pgF()
                   ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                   ~~~
!!! error TS2126: Getters must return a value.
        public psF(param:any) { }
        ~~~~~~
!!! error TS1005: '{' expected.
        public set psF(param:any)
                   ~~~
!!! error TS2000: Duplicate identifier 'psF'.
        private rgF() { }
        ~~~~~~~
!!! error TS1005: '{' expected.
        private get rgF()
                    ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                    ~~~
!!! error TS2126: Getters must return a value.
        private rsF(param:any) { }
        ~~~~~~~
!!! error TS1005: '{' expected.
        private set rsF(param:any)
                    ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
        static tV;
        ~~~~~~
!!! error TS1005: '{' expected.
        static tF() { }
        static tsF(param:any) { }
        static set tsF(param:any)
                   ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
        static tgF() { }
        ~~~~~~
!!! error TS1005: '{' expected.
        static get tgF()
                   ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                   ~~~
!!! error TS2126: Getters must return a value.
    }
    ~
!!! error TS1005: '{' expected.
    interface I {
    ~~~~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
        //Call Signature
        ();
        (): number;
        ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
        (p);
        (p1: string);
        (p2?: string);
        (...p3: any[]);
        (p4: string, p5?: string);
        (p6: string, ...p7: any[]);
        //(p8?: string, ...p9: any[]);
        //(p10:string, p8?: string, ...p9: any[]);
        
        //Construct Signature
        new ();
        new (): number;
        ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
        new (p: string);
        new (p2?: string);
        new (...p3: any[]);
        new (p4: string, p5?: string);
        new (p6: string, ...p7: any[]);
    
        //Index Signature
        [p];
        [p1: string];
        [p2: string, p3: number];
                   ~
!!! error TS1005: ']' expected.
                               ~
!!! error TS1005: ';' expected.
                                ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
        //Property Signature
        p;
        p1?;
        p2?: string;
        
        //Function Signature
        p3();
        ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
        p4? ();
        p5? (): void;
        p6(pa1): void;
        p7(pa1, pa2): void;
        p7? (pa1, pa2): void;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
    }
    module M {
        var V;
        function F() { };
        class C {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
            public get pgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
            public psF(param:any) { }
            ~~~~~~
!!! error TS1005: '{' expected.
            public set psF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'psF'.
            private rgF() { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private get rgF()
                        ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                        ~~~
!!! error TS2126: Getters must return a value.
            private rsF(param:any) { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private set rsF(param:any)
                        ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
            static tV;
            ~~~~~~
!!! error TS1005: '{' expected.
            static tF() { }
            static tsF(param:any) { }
            static set tsF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
            static tgF() { }
            ~~~~~~
!!! error TS1005: '{' expected.
            static get tgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
        }
        ~
!!! error TS1005: '{' expected.
        interface I {
        ~~~~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
            //Call Signature
            ();
            (): number;
            ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            [p2: string, p3: number];
                       ~
!!! error TS1005: ']' expected.
                                   ~
!!! error TS1005: ';' expected.
                                    ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
            ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
        }
        module M {
            var V;
            function F() { };
            class C { };
            interface I { };
            module M { };
            export var eV;
            export function eF() { };
            export class eC { };
            export interface eI { };
            export module eM { };
            export declare var eaV;
            export declare function eaF() { };
            export declare class eaC { };
            export declare module eaM { };
        }
        export var eV;
        export function eF() { };
        export class eC {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
            public get pgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
            public psF(param:any) { }
            ~~~~~~
!!! error TS1005: '{' expected.
            public set psF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'psF'.
            private rgF() { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private get rgF()
                        ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                        ~~~
!!! error TS2126: Getters must return a value.
            private rsF(param:any) { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private set rsF(param:any)
                        ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
            static tV;
            ~~~~~~
!!! error TS1005: '{' expected.
            static tF() { }
            static tsF(param:any) { }
            static set tsF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
            static tgF() { }
            ~~~~~~
!!! error TS1005: '{' expected.
            static get tgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
        }
        ~
!!! error TS1005: '{' expected.
        export interface eI {
        ~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
            //Call Signature
            ();
            (): number;
            ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            [p2: string, p3: number];
                       ~
!!! error TS1005: ']' expected.
                                   ~
!!! error TS1005: ';' expected.
                                    ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
            ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
        }
        export module eM {
            var V;
            function F() { };
            class C { };
            interface I { };
            module M { };
            export var eV;
            export function eF() { };
            export class eC { };
            export interface eI { };
            export module eM { };
            export declare var eaV;
            export declare function eaF() { };
            export declare class eaC { };
            export declare module eaM { };
        }
        export declare var eaV;
        export declare function eaF() { };
        export declare class eaC {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
            public get pgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
            public psF(param:any) { }
            ~~~~~~
!!! error TS1005: '{' expected.
            public set psF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'psF'.
            private rgF() { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private get rgF()
                        ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                        ~~~
!!! error TS2126: Getters must return a value.
            private rsF(param:any) { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private set rsF(param:any)
                        ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
            static tV;
            ~~~~~~
!!! error TS1005: '{' expected.
            static tF() { }
            static tsF(param:any) { }
            static set tsF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
            static tgF() { }
            ~~~~~~
!!! error TS1005: '{' expected.
            static get tgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
        }
        ~
!!! error TS1005: '{' expected.
        export declare module eaM {
        ~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
            var V;
            function F() { };
            class C { }
            interface I { }
            module M { }
            export var eV;
            export function eF() { };
            export class eC { }
            export interface eI { }
            export module eM { }
        }
    }
    export var eV;
    export function eF() { };
    export class eC {
        constructor () { }
        public pV;
        private rV;
        public pF() { }
        private rF() { }
        public pgF() { }
        public get pgF()
                   ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                   ~~~
!!! error TS2126: Getters must return a value.
        public psF(param:any) { }
        ~~~~~~
!!! error TS1005: '{' expected.
        public set psF(param:any)
                   ~~~
!!! error TS2000: Duplicate identifier 'psF'.
        private rgF() { }
        ~~~~~~~
!!! error TS1005: '{' expected.
        private get rgF()
                    ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                    ~~~
!!! error TS2126: Getters must return a value.
        private rsF(param:any) { }
        ~~~~~~~
!!! error TS1005: '{' expected.
        private set rsF(param:any)
                    ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
        static tV;
        ~~~~~~
!!! error TS1005: '{' expected.
        static tF() { }
        static tsF(param:any) { }
        static set tsF(param:any)
                   ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
        static tgF() { }
        ~~~~~~
!!! error TS1005: '{' expected.
        static get tgF()
                   ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                   ~~~
!!! error TS2126: Getters must return a value.
    }
    ~
!!! error TS1005: '{' expected.
    export interface eI {
    ~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
        //Call Signature
        ();
        (): number;
        ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
        (p);
        (p1: string);
        (p2?: string);
        (...p3: any[]);
        (p4: string, p5?: string);
        (p6: string, ...p7: any[]);
        //(p8?: string, ...p9: any[]);
        //(p10:string, p8?: string, ...p9: any[]);
        
        //Construct Signature
        new ();
        new (): number;
        ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
        new (p: string);
        new (p2?: string);
        new (...p3: any[]);
        new (p4: string, p5?: string);
        new (p6: string, ...p7: any[]);
    
        //Index Signature
        [p];
        [p1: string];
        [p2: string, p3: number];
                   ~
!!! error TS1005: ']' expected.
                               ~
!!! error TS1005: ';' expected.
                                ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
        //Property Signature
        p;
        p1?;
        p2?: string;
        
        //Function Signature
        p3();
        ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
        p4? ();
        p5? (): void;
        p6(pa1): void;
        p7(pa1, pa2): void;
        p7? (pa1, pa2): void;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
    }
    export module eM {
        var V;
        function F() { };
        class C {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
            public get pgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
            public psF(param:any) { }
            ~~~~~~
!!! error TS1005: '{' expected.
            public set psF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'psF'.
            private rgF() { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private get rgF()
                        ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                        ~~~
!!! error TS2126: Getters must return a value.
            private rsF(param:any) { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private set rsF(param:any)
                        ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
            static tV;
            ~~~~~~
!!! error TS1005: '{' expected.
            static tF() { }
            static tsF(param:any) { }
            static set tsF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
            static tgF() { }
            ~~~~~~
!!! error TS1005: '{' expected.
            static get tgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
        }
        ~
!!! error TS1005: '{' expected.
        interface I {
        ~~~~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
            //Call Signature
            ();
            (): number;
            ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            [p2: string, p3: number];
                       ~
!!! error TS1005: ']' expected.
                                   ~
!!! error TS1005: ';' expected.
                                    ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
            ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
        }
        module M {
            var V;
            function F() { };
            class C { };
            interface I { };
            module M { };
            export var eV;
            export function eF() { };
            export class eC { };
            export interface eI { };
            export module eM { };
            export declare var eaV;
            export declare function eaF() { };
            export declare class eaC { };
            export declare module eaM { };
        }
        export var eV;
        export function eF() { };
        export class eC {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
            public get pgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
            public psF(param:any) { }
            ~~~~~~
!!! error TS1005: '{' expected.
            public set psF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'psF'.
            private rgF() { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private get rgF()
                        ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                        ~~~
!!! error TS2126: Getters must return a value.
            private rsF(param:any) { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private set rsF(param:any)
                        ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
            static tV;
            ~~~~~~
!!! error TS1005: '{' expected.
            static tF() { }
            static tsF(param:any) { }
            static set tsF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
            static tgF() { }
            ~~~~~~
!!! error TS1005: '{' expected.
            static get tgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
        }
        ~
!!! error TS1005: '{' expected.
        export interface eI {
        ~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
            //Call Signature
            ();
            (): number;
            ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            [p2: string, p3: number];
                       ~
!!! error TS1005: ']' expected.
                                   ~
!!! error TS1005: ';' expected.
                                    ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
            ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
        }
        export module eM {
            var V;
            function F() { };
            class C { };
            interface I { };
            module M { };
            export var eV;
            export function eF() { };
            export class eC { };
            export interface eI { };
            export module eM { };
            export declare var eaV;
            export declare function eaF() { };
            export declare class eaC { };
            export declare module eaM { };
        }
        export declare var eaV;
        export declare function eaF() { };
        export declare class eaC {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
            public get pgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
            public psF(param:any) { }
            ~~~~~~
!!! error TS1005: '{' expected.
            public set psF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'psF'.
            private rgF() { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private get rgF()
                        ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                        ~~~
!!! error TS2126: Getters must return a value.
            private rsF(param:any) { }
            ~~~~~~~
!!! error TS1005: '{' expected.
            private set rsF(param:any)
                        ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
            static tV;
            ~~~~~~
!!! error TS1005: '{' expected.
            static tF() { }
            static tsF(param:any) { }
            static set tsF(param:any)
                       ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
            static tgF() { }
            ~~~~~~
!!! error TS1005: '{' expected.
            static get tgF()
                       ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                       ~~~
!!! error TS2126: Getters must return a value.
        }
        ~
!!! error TS1005: '{' expected.
        export declare module eaM {
        ~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
            var V;
            function F() { };
            class C { }
            interface I { }
            module M { }
            export var eV;
            export function eF() { };
            export class eC { }
            export interface eI { }
            export module eM { }
        }
    }
    export declare var eaV;
    export declare function eaF() { };
    export declare class eaC {
        constructor () { }
        public pV;
        private rV;
        public pF() { }
        private rF() { }
        public pgF() { }
        public get pgF()
                   ~~~
!!! error TS2000: Duplicate identifier 'pgF'.
                   ~~~
!!! error TS2126: Getters must return a value.
        public psF(param:any) { }
        ~~~~~~
!!! error TS1005: '{' expected.
        public set psF(param:any)
                   ~~~
!!! error TS2000: Duplicate identifier 'psF'.
        private rgF() { }
        ~~~~~~~
!!! error TS1005: '{' expected.
        private get rgF()
                    ~~~
!!! error TS2000: Duplicate identifier 'rgF'.
                    ~~~
!!! error TS2126: Getters must return a value.
        private rsF(param:any) { }
        ~~~~~~~
!!! error TS1005: '{' expected.
        private set rsF(param:any)
                    ~~~
!!! error TS2000: Duplicate identifier 'rsF'.
        static tV;
        ~~~~~~
!!! error TS1005: '{' expected.
        static tF() { }
        static tsF(param:any) { }
        static set tsF(param:any)
                   ~~~
!!! error TS2000: Duplicate identifier 'tsF'.
        static tgF() { }
        ~~~~~~
!!! error TS1005: '{' expected.
        static get tgF()
                   ~~~
!!! error TS2000: Duplicate identifier 'tgF'.
                   ~~~
!!! error TS2126: Getters must return a value.
    }
    ~
!!! error TS1005: '{' expected.
    export declare module eaM {
    ~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
        var V;
        function F() { };
        class C {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            static tV;
            static tF() { }
        }
        interface I {
            //Call Signature
            ();
            (): number;
            ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            (p: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            [p2: string, p3: number];
                       ~
!!! error TS1005: ']' expected.
                                   ~
!!! error TS1005: ';' expected.
                                    ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
            ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
        }
        module M {
            var V;
            function F() { };
            class C { }
            interface I { }
            module M { }
            export var eV;
            export function eF() { };
            export class eC { }
            export interface eI { }
            export module eM { }
            export declare var eaV
            export declare function eaF() { };
            export declare class eaC { }
            export declare module eaM { }
        }
        export var eV;
        export function eF() { };
        export class eC {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            static tV
            static tF() { }
        }
        export interface eI {
            //Call Signature
            ();
            (): number;
            ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            [p2: string, p3: number];
                       ~
!!! error TS1005: ']' expected.
                                   ~
!!! error TS1005: ';' expected.
                                    ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
            ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
        }
        export module eM {
            var V;
            function F() { };
            class C { }
            module M { }
            export var eV;
            export function eF() { };
            export class eC { }
            export interface eI { }
            export module eM { }
        }
    }